--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -12,7 +12,7 @@
 <div class="d-flex flex-wrap justify-content-between mb-3">
     <!-- Grupo de acciones principales -->
     <div class="btn-group" role="group" aria-label="Acciones principales">
-        <button id="btnAgregarComputadora" class="btn btn-primary me-2" data-bs-toggle="modal" data-bs-target="#addComputerModal">
+        <button id="btnAgregarComputadora" class="btn btn-primary me-2">
             <i class="bi bi-pc-display me-2"></i>Agregar Computadora
         </button>
         
