--- a/templates/componentes_obsoletos.html
+++ b/templates/componentes_obsoletos.html
@@ -40,6 +40,10 @@
                     <button id="aplicarFiltrosComponentes" class="btn btn-primary">
                         <i class="bi bi-funnel"></i> Aplicar
                     </button>
+                    <button id="btnExportarExcel" class="btn btn-success ms-2">
+                        <i class="bi bi-download me-1"></i> Exportar a Excel
+                    </button>
+                    
                 </div>
             </div>
         </div>
