--- a/templates/eliminadas.html
+++ b/templates/eliminadas.html
@@ -18,7 +18,7 @@
                     <tbody>
                         <tr>
                             <td>
-                                <input type="text" id="filtroBusqueda" class="form-control" placeholder="Nombre/Modelo/Serie">
+                                <input type="text" id="filtroBusqueda" class="form-control" placeholder="Nombre">
                             </td>
                             <td>
                                 <select id="filtroPropiedad" class="form-select">
@@ -41,6 +41,11 @@
                                 <button type="button" class="btn btn-primary" id="aplicarFiltros">
                                     <i class="bi bi-funnel"></i> Aplicar filtros
                                 </button>
+                                <button id="btnExportarEliminadas" class="btn btn-success mt-2">
+                                    <i class="bi bi-file-earmark-excel me-2"></i>Exportar Excel
+                                </button>
+                                
+                                
                             </td>
                         </tr>
                     </tbody>
