--- a/templates/login.html
+++ b/templates/login.html
@@ -74,6 +74,8 @@
                                 <button type="submit" class="btn" style="background-color: #184a7d; color: white;">Ingresar</button>
                             </div>
                         </form>
+                        <a href="/recuperar" class="text-white text-decoration-underline">¿Olvidó su contraseña?</a>
+
                         <div class="text-center mt-3">
                             <!-- Eliminamos la opción de registro porque ahora solo el admin puede crear usuarios -->
                         </div>
@@ -118,12 +120,6 @@
 <footer class="footer py-3 mt-auto" style="background-color: #C29D10; color: white; position: fixed; bottom: 0; width: 100%;">
     <div class="container text-center">
         <p class="mb-1">&copy; 2025 <strong>INVENTARIO UNAH</strong>. Todos los derechos reservados.</p>
-        <p class="mb-1">Desarrollado por <strong>Fabiel Ivan Vasquez Mendoza</strong>.</p>
-        <p class="mb-1">
-            Contáctanos: 
-            <a href="mailto:fabielvasques52gmail.com" style="color: white; text-decoration: underline;">fabielvasques52gmail.com</a> | 
-            Teléfono: <a href="tel:+50495166590" style="color: white; text-decoration: underline;">+504 9516-6590</a>
-        </p>
         
     </div>
 </footer>
